--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "implicit-arrow-linebreak": "off",
     "operator-linebreak": "off",
     "react/jsx-no-bind": "off",
-    "camelcase": "off"
+    "camelcase": "off",
+    "max-len": "off"
   }
 }
