--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     "operator-linebreak": "off",
     "react/jsx-no-bind": "off",
     "camelcase": "off",
-    "max-len": "off"
+    "max-len": "off",
+    "indent": "off"
   }
 }
